--- a/src/Pages/Home/Business.css
+++ b/src/Pages/Home/Business.css
@@ -48,18 +48,24 @@
   font-size: 48px;
   color: #e6e6e6;
 }
+.content .box .icon:hover{
+  font-size: 48px;
+  color: #2CC8A0;
+}
 .content .box .counter{
   font-size: 50px;
   font-weight: 500;
   color: #f2f2f2;
   font-family: sans-serif;
 }
+
 .content .box .text{
   font-size: 25px;
   font-weight: 400;
-  color: #ccc;
+  color: #2CC8A0;
   margin-bottom: 20px;
 }
+
 @media screen and (max-width: 1036px) {
   .counter-up{
     padding: 50px 50px 0 50px;
