--- a/src/Pages/shared/Navber.css
+++ b/src/Pages/shared/Navber.css
@@ -1,5 +1,5 @@
 .style-nev{
-    background-color:rgba(0, 0, 0, 0.7);
+    background-color:rgba(0, 0, 0, 0.5);
     width: 100%;
     color: white;
     z-index: 1000;
@@ -9,6 +9,12 @@
 }
 .navbar {
     padding: 20px 40px;
+}
+.navbar img{
+    width: 200px;
+    height: 50px;
+ 
+    
 }
 .navbar a{
     color: white;
