--- a/src/Pages/Home/Reviews.css
+++ b/src/Pages/Home/Reviews.css
@@ -19,14 +19,15 @@
 }
 
 .reviewImg {
-    padding: 0 75px;
+    padding: 20px 20px;
 }
 
 .reviewImg img {
-    width: 90px;
-    height: 110px;
+    width: 100px !important;
+    height: 100px;
     border-radius: 100%;
-    margin-top: -70px;
+    margin: 0 auto;
+   
 }
 
 .review-container {
