--- a/src/pages/Home/Slider.css
+++ b/src/pages/Home/Slider.css
@@ -5,11 +5,12 @@
     justify-content: center;
     align-items: center;
     background-color: #001232;
-    clip-path:circle(180vh at 50%  -70vh);
+    clip-path:circle(180vh at 50%  -80vh);
 }
 
 .slidr-dev{
    width: 90%;
+   height: 100vh;
 }
 .owl-theme{
    width: 90%;
