--- a/src/Pages/Home/Reviews.css
+++ b/src/Pages/Home/Reviews.css
@@ -27,6 +27,7 @@
     height: 100px;
     border-radius: 100%;
     margin: 0 auto;
+    margin-top: -80px;
    
 }
 
@@ -64,15 +65,20 @@
     color: #2CC8A0;
 }
 
-@media screen and (Max-width:688px) {
 
-    .reviewImg {
-        padding: 0 50px;
-    }
-}
 
-@media screen and (Min-width:689px) and (Max-width: 992px) {
+@media (max-width:700px) {
     .reviewImg {
-        padding: 0 62px;
+        padding: 20px 20px;
     }
+    
+    .reviewImg img {
+        width: 80px !important;
+        height: 80px;
+        border-radius: 100%;
+        margin: 0 auto;
+        margin-top: -80px;
+       
+    }
+    
 }
