--- a/src/pages/Home/Slider.css
+++ b/src/pages/Home/Slider.css
@@ -5,7 +5,7 @@
     justify-content: center;
     align-items: center;
     background-color: #001232;
-    clip-path:circle(180vh at 50%  -80vh);
+    /* clip-path:circle(180vh at 50%  -80vh); */
 }
 
 .slidr-dev{
