footer icon added

--- a/src/Pages/shared/Footer.css
+++ b/src/Pages/shared/Footer.css
@@ -6,3 +6,9 @@
     /* width:100% !important; */
     /* height: 100vh; */
 /* } */ 
+.icon{
+    font-size: 23px;
+}
+.icons{
+    margin-right: 3px;
+}
