--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,22 @@
-.App {
-  text-align: center;
-
+:root{
+  --text-color:#000000;
+  --bg-color:#ffffff;
+  
 }
-.nav-fixed{
-  position: relative;
+.theme-dark{
+  --text-color:#ffffff;
+  --bg-color:#000000;
+ 
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1{
+  color: var(--text-color);
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.content-bg-color{
+  background-color: var(--bg-color);
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.chackbox{
+  position: absolute;
+  top:20;
+  right: 20;
+  z-index: 10000000;
 }
