--- a/src/pages/Home/Banner.css
+++ b/src/pages/Home/Banner.css
@@ -37,7 +37,8 @@
     /* font-family: Arial, Helvetica, sans-serif; */
     text-align: center;
     font-size: 4rem;
-    color: white;
+    /* color: white; */
+    color: var(--text-color);
     font-weight: 900;
     z-index: 100 !important;
 }
