add review added

--- a/src/Pages/Home/Reviews.css
+++ b/src/Pages/Home/Reviews.css
@@ -42,6 +42,8 @@
     border: none;
     border-radius: 7px;
     padding: 10px 16px;
+    text-decoration: none;
+    color: aliceblue;
 }
 
 .review {
