--- a/src/Pages/Home/Contact.css
+++ b/src/Pages/Home/Contact.css
@@ -42,7 +42,7 @@
 
 }
 .contract-col1{
-  background-image:url("../../assests/bg.jpg"); 
+  background-image:url("../../assests/bgg.jpg"); 
   background-repeat: no-repeat;
   background-size: cover;
   clip-path:circle(100% at 0% 50%);
