--- a/src/Pages/Searching/Search.css
+++ b/src/Pages/Searching/Search.css
@@ -15,31 +15,37 @@
 .search-icon-container{
     background-color: #F2F2F2;
     border-radius: 20px;
+    padding: 10px;
+    text-decoration: none;
+    color:black;
 }
+
 
 .search-icon {
-    width: 100px;
-    height: 40px;
-    color: rgb(57, 182, 184);
-    margin-top: 15px;
+    width: 90px;
+    height: 35px;
+
 }
 
-.search-icon:hover {
-    width: 100px;
-    height: 40px;
+/* .search-icon:hover {
+    width: 90px;
+    height: 35px;
     color: rgb(7, 218, 255);
 
     cursor: pointer;
     
-}
+} */
 
 .search-icon-name {
     width: 100px;
     height: 30px;
-    color: rgb(15, 21, 21);
     font-size: 17px;
+    margin-bottom: 0px;
 
 }
+/* .search-icon-name:hover{
+    color: none;
+} */
 .search-content{
     font-weight: bold;
 }
@@ -78,6 +84,11 @@
 
 
 }
+.from-text2{
+    margin-left: 300px;
+
+
+}
 .To-text{
     margin-left: 250px;
 }
@@ -94,4 +105,22 @@
 .suggestion:hover{
     background-color: #F2F2F2;
     color: rgb(57, 182, 184);
+}
+.search-bar{
+    color: rgb(57, 182, 184);
+    cursor: pointer;
+}
+.search-bar:hover{
+    color: crimson;
+    cursor: pointer;
+}
+
+.active{
+    color: rgb(249, 39, 119);
+}
+
+.form-control1{
+    position: absolute;
+    top: 50px;
+    z-index: 2;
 }
