--- a/src/BusTiceket/BussTiceket.css
+++ b/src/BusTiceket/BussTiceket.css
@@ -8,7 +8,7 @@ h1,h2,h3,h4,h5,p,span{
 }
 .BusTicket{
     width:100%;
-    /* height:80vh; */
+    height:80vh;
     display: grid;
     grid-template-columns: 400px 1fr;
     background-color: yellow;
