--- a/src/BusTiceket/BussTiceket.css
+++ b/src/BusTiceket/BussTiceket.css
@@ -8,10 +8,10 @@ h1,h2,h3,h4,h5,p,span{
 }
 .BusTicket{
     width:100%;
-    height:80vh;
+    /* height:80vh; */
     display: grid;
     grid-template-columns: 400px 1fr;
-    background-color: yellow;
+    /* background-color: yellow; */
 }
 .filter{
     background-color:red
@@ -22,4 +22,10 @@ h1,h2,h3,h4,h5,p,span{
 .filter div li{
     list-style: none;
     font-size: 22px;
+}
+.Each-bus{
+    display: flex;
+    justify-content: space-between;
+    border: solid skyblue 5px;
+    margin: 30px;
 }
