--- a/src/Pages/SearchResult/BusList.css
+++ b/src/Pages/SearchResult/BusList.css
@@ -2,9 +2,10 @@
     margin-top: 70px;
 }
 
-.busroute{
+.busRoute{
     font-size: bolder;
     margin-top: 5px;
+    color: #0071C2;
 }
 
 .listContainer{
@@ -106,6 +107,7 @@
 .refine{
     color: #ffffff;
     margin-bottom: 10px;
+    font-size: 22px;
 }
 .filterTitle{
     color: #17c2f1;
@@ -120,4 +122,14 @@
 .filterProperty>p{
     color: #ffffff;
     cursor: pointer;
+}
+
+.travelDate{
+    margin-right: 100px;
+    font-size: 20px;
+    color: #008009;
+}
+.returnDate{
+    font-size: 20px;
+    color: #008009;
 }
