--- a/src/Pages/SearchResult/SearchBanner.css
+++ b/src/Pages/SearchResult/SearchBanner.css
@@ -1,7 +1,7 @@
 .searchBanner{
     background-color: #293C5A;
     width: 100%;
-    height: 280px;
+    height: 240px;
     margin: 0px;
     position: relative;
   }
@@ -14,15 +14,16 @@
     color: #ffffff;
     position: absolute;
     top: 50px;
-    left: 530px;
+    left: 550px;
     margin: 0px;
+    font-size: 28px;
   }
   .searchBannerText2{
     display: inline;
     color: #ffffff;
     position: absolute;
     top: 110px;
-    left: 640px;
+    left: 620px;
     font-size: 20px;
   }
   
