--- a/src/Pages/SearchResult/BusItem.css
+++ b/src/Pages/SearchResult/BusItem.css
@@ -32,7 +32,7 @@
   
   .siTaxiOp {
     font-size: 12px;
-    background-color: #008009;
+    background-color: #0071C2;
     color: white;
     width: max-content;
     padding: 3px;
