--- a/src/Pages/Home/Business.css
+++ b/src/Pages/Home/Business.css
@@ -1,17 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
 
 .summary {
-  background: var(--business-bg);
+  /* background: var(--business-bg);  */
   color: aliceblue;
+  background-color: #266E85;
+
 
 }
 
 .summary h2 {
-  color: #2CC8A0 !important;
+  color: whitesmoke;
+  /* background-color: mediumslateblue;  */
+
 }
 
 .counter-up {
-  background: var(--business-bg);
+  /* background: var(--business-bg);  */
+  background-color: #266E85;
   min-height: 30vh;
   background-size: cover;
   background-attachment: fixed;
@@ -29,7 +34,9 @@
   left: 0;
   height: 100%;
   width: 100%;
-  background: var(--business-bg);
+  /* background: var(--business-bg);  */
+  background-color: #266E85;
+
 }
 
 .counter-up .content {
