--- a/src/Pages/SearchResult/BusItem.css
+++ b/src/Pages/SearchResult/BusItem.css
@@ -107,3 +107,12 @@
     cursor: pointer;
     border-radius: 5px;
   }
+  .siCheckButton:hover{
+    background-color: #2C4966;
+    color: white;
+    font-weight: bold;
+    padding: 10px 5px;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+  }
