--- a/src/Pages/SearchResult/BusList.css
+++ b/src/Pages/SearchResult/BusList.css
@@ -4,8 +4,9 @@
 
 .busRoute{
     font-size: bolder;
-    margin-top: 5px;
-    color: #0071C2;
+    margin-top: 50px;
+    color: rgb(255, 255, 255);
+
 }
 
 .listContainer{
@@ -13,24 +14,40 @@
     justify-content: center;
     margin-top: 20px;
 
+
+}
+.mainRoute{
+    display: flex;
+    height: 200px;
+    justify-content: center;
+}
+.routeNameDate{
+    background-color: #2C4966;
+
+    width: 100%;
+
+    padding: 10px;
+
 }
 
 .listWrapper{
     width: 100%;
     max-width: 1024px;
     display: flex;
-    gap: 20px;
+    gap: 60px;
 
 }
 
 .listSearch{
     flex: 1;
-    background-color: #293C5A;
+    /* background-color: #293C5A; */
+    background-color: #2C4966;
     padding: 20px;
     border-radius: 10px;
     position: sticky;
     top: 10px;
     height: max-content;
+
 }
 
 .IsTitle{
@@ -127,9 +144,31 @@
 .travelDate{
     margin-right: 100px;
     font-size: 20px;
-    color: #008009;
+    color: #17c2f1;
+    margin-bottom: 0px;
 }
 .returnDate{
     font-size: 20px;
-    color: #008009;
+    color: #17c2f1;
+    margin-bottom: 0px;
+}
+
+.containerOfBus{
+    margin-left: 200px;
+    margin-right: 200px;
+    margin-top: 20px;
+}
+
+.dateOfTravel{
+    border: 1px solid white;
+    padding: 10px;
+    border-radius: 50px;
+    margin: 0px;
+    width: fit-content;
+    padding: 12px;
+}
+.dateMain{
+    display: flex;
+    justify-content: center;
+
 }
