--- a/src/Pages/SearchResult/SearchBanner.css
+++ b/src/Pages/SearchResult/SearchBanner.css
@@ -1,5 +1,5 @@
 .searchBanner{
-    background-color: #293C5A;
+    background-color: #2C4966;
     width: 100%;
     height: 240px;
     margin: 0px;
@@ -26,4 +26,7 @@
     left: 620px;
     font-size: 20px;
   }
-  
+  .searchBanImg{
+    width: 100%;
+
+  }
