payment route added

--- a/src/Pages/SearchResult/SearchBanner.css
+++ b/src/Pages/SearchResult/SearchBanner.css
@@ -20,7 +20,7 @@
   }
   .searchBannerText2{
     display: inline;
-    color: #ffffff;
+    color: #17c2f1;
     position: absolute;
     top: 110px;
     left: 620px;
