--- a/src/Pages/Payment/Payment.css
+++ b/src/Pages/Payment/Payment.css
@@ -1,5 +1,5 @@
 .journeyInfo{
-    margin-top: 200px;
+    margin-top: 100px;
     display: flex;
     justify-content: center;
     gap: 60px;
@@ -111,6 +111,7 @@
     width: 600px;
     border: 1px solid black;
     border-radius: 10px;
+    margin-bottom: 20px;
 }
 .pTitle{
     font-size: 20px;
@@ -138,4 +139,15 @@
 }
 
 /*-----------payment----------*/
+
+.stripePay{
+    background-color: #1CA470;
+    padding: 10px;
+    color: whitesmoke;
+    font-weight: bold;
+}
+.completePayment{
+    margin-left: 200px;
+    margin-right: 200px;
+}
 
