--- a/src/Pages/SearchResult/BusList.css
+++ b/src/Pages/SearchResult/BusList.css
@@ -4,8 +4,9 @@
 
 .busRoute{
     font-size: bolder;
-    margin-top: 50px;
-    color: rgb(255, 255, 255);
+    margin-top: 0px;
+    margin-bottom: 0px;
+    color: rgb(1, 1, 1);
 
 }
 
@@ -18,15 +19,19 @@
 }
 .mainRoute{
     display: flex;
-    height: 200px;
+    /* height: 200px; */
     justify-content: center;
+    margin-top: 0px;
 }
 .routeNameDate{
-    background-color: #2C4966;
+    /* background-color: #2C4966; */
 
     width: 100%;
-
-    padding: 10px;
+    margin-top: 0px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 0px;
+    padding-bottom: 10px;
 
 }
 
@@ -144,31 +149,37 @@
 .travelDate{
     margin-right: 100px;
     font-size: 20px;
-    color: #17c2f1;
+    /* color: #17c2f1; */
+    color: #ffffff;
     margin-bottom: 0px;
 }
 .returnDate{
     font-size: 20px;
-    color: #17c2f1;
+    /* color: #17c2f1; */
+    color: #ffffff;
     margin-bottom: 0px;
 }
 
 .containerOfBus{
     margin-left: 200px;
     margin-right: 200px;
-    margin-top: 20px;
+    margin-top: 0px;
 }
 
 .dateOfTravel{
-    border: 1px solid white;
+    border: 1px solid rgb(1, 1, 1);
     padding: 10px;
     border-radius: 50px;
     margin: 0px;
-    width: fit-content;
+    width: 700px;
     padding: 12px;
+    background-color: #2C4966;
 }
 .dateMain{
     display: flex;
     justify-content: center;
+    margin-top: 10px;
+    margin-bottom: 10px;
+
 
 }
