--- a/src/Pages/SearchResult/SearchBanner.css
+++ b/src/Pages/SearchResult/SearchBanner.css
@@ -2,7 +2,7 @@
     background-color: #293C5A;
     width: 100%;
     height: 240px;
-    margin: 0px;
+    margin-top: 140px;
     position: relative;
   }
   .searchBannerContainer{
