--- a/src/Pages/Booking/Booking.css
+++ b/src/Pages/Booking/Booking.css
@@ -2,12 +2,14 @@
     width: 100vw;
     height: 100vh;
     background-color: rgba(0, 0, 0, 0.418);
-    position: fixed;
+    position: fixed; 
     top: 0;
     left: 0;
     display: flex;
     align-items: center;
     justify-content: center;
+    z-index: 10000;
+
   }
   
   .rContainer {
@@ -17,7 +19,8 @@
     width: 300px;
     border-radius: 20px;
     left: 100px;
-    top: 50px;
+    top: 30px;
+    z-index: 10000;
 
   }
   .seatTitle{
